# tsdm-bot

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  README.md  bot.py  docker-compose.yml  pyproject.toml
src/plugins/tsdm/: __init__.py  account.py  config.py  utils.py
